--- a/metadata.yaml
+++ b/metadata.yaml
@@ -42,5 +42,6 @@ subjects:
 - !lcsh 'Bees'
 - !lcsh 'Honeybee'
 - !lcc 'QL'
+- GITenberg
 title: Het verhaal van de honingbij
 url: http://www.gutenberg.org/ebooks/28963
